--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body class="page">
+  </head>
+  <body class="page">
     <header class="header">
-        <h1> <a href="#" class="header__link" lang="ru">Ramil</a></h1>
-       </header>
-</body>
+      <h1><a href="#" class="header__link" lang="ru">Ramil</a></h1>
+    </header>
+    <nav class="menu centered-block page__menu">
+      <a href="#beginner" class="menu__link menu__link_active"
+        >Первые шаги в HTML и CSS</a
+      >
+      <a href="#frameworks" class="menu__link">Библиотеки JavaScript</a>
+      <a href="#practice" class="menu__link">Практика HTML, CSS и JavaScript</a>
+    </nav>
+  </body>
 </html>
